2024-02-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-8
	* R/l1Design.R, ..: partially matched args: use seq_along(); seq(..., length.out=.)

2024-02-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/scobs.R (cut00): no longer use is.R()
	* tests/multi-constr.{R,Rout.save}: use some stopifnot(); tweaks for M1
	* DESCRIPTION (Version): 1.3-7  (r403)

2023-10-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-6; update URLs

2022-05-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/*.Rd: fix \ escapes

2022-05-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/*.c: use R_alloc(); declare Sint ourselves (r385)
	* DESCRIPTION (Version): 1.3-5

2020-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/0_pt-ex.R: move duplicates, as has no *.Rout.save (373)
	* tests/*.R;Rout.save: updates, tweaks
	* DESCRIPTION (Version): 1.3-4

2017-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/concaveRegr.R (conreg): include the former unexported SR() as
	conreg(*, method = "SR").  Add `verbose` option.

	New utilities for cubic spline interpolation, `interpSplineCon()` etc.

2017-03-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/scobs.R (predict.cobs): fix the bug that "extrapolation to the
	right" gave 'NaN' (from division by zero),
	by removing the extraneous coef[]  (I call a 'Kludge').

	* src/init.c, src/splines.h: new, add "proper registration"
	* NAMESPACE: ditto
	* DESCRIPTION (Version): 1.3-3

2017-03-19  Martin Mächler  <maechler@stat.math.ethz.ch>

	* R/scobs.R (predict.cobs): new 'deriv = 0' argument; allows
	'deriv = 1' to compute first derivatives s'().
	* R/scobs.R (cobs): remove deprecated arguments (of *long* ago).

2017-01-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-2
	* tests/*: update, notably for newer version of R's 'splines' package.

2015-09-01  Martin Maechler  <maechler@stat.math.ethz.ch>
