@@ -1,7 +1,7 @@
 Package: cobs
 Version: 1.3-8
 VersionNote: Released 1.3-7 on 2024-02-03
-Date: 2024-02-25
+Date: 2024-03-05
 Title: Constrained B-Splines (Sparse Matrix Based)
 Description: Qualitatively Constrained (Regression) Smoothing Splines via
         Linear Programming and Sparse Matrices.
